--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ h1,h2,h3,h4,h5,h6{
     color: var(--brillante);
 }
 
+.error{
+    color: var(--red-brillante);
+}
+
 .center{
     display: flex;
     justify-content: center;
@@ -123,6 +127,16 @@ h1,h2,h3,h4,h5,h6{
 
 .glow-text{
     text-shadow: 0px 0px 10px rgba(85,255,85,0.81);
+}
+
+.glow-error{
+    -webkit-box-shadow:0px 0px 135px 25px rgba(255, 85, 85, 0.81);
+    -moz-box-shadow: 0px 0px 135px 25px rgba(255, 85, 85, 0.81);
+    box-shadow: 0px 0px 135px 25px rgba(255, 85, 85, 0.81);
+}
+
+.glow-text-error{
+    text-shadow: 0px 0px 10px rgba(255, 85, 85, 0.81);
 }
 
 .radius{
