--- a/style.css
+++ b/style.css
@@ -151,6 +151,14 @@ h1,h2,h3,h4,h5,h6{
 }
 
 
+.link{
+    text-decoration: underline;
+}
+
+.link:hover{
+    color: var(--scuro);
+}
+
 /*FORM*/
 /* Stacked Layout (default) */
 .form-group {
