--- a/style.css
+++ b/style.css
@@ -334,6 +334,10 @@ input[type="reset"]:hover{
     border: 1px solid var(--neon);
 }
 
+.select-hide {
+    display: none;
+  };
+
 /* Button Styling */
 button {
     width: 100%;
@@ -346,6 +350,7 @@ button {
     cursor: pointer;
     transition: background-color 0.3s;
 }
+
 
 button:hover {
     border-color: #45a049;
