--- a/style.css
+++ b/style.css
@@ -119,6 +119,22 @@ h1,h2,h3,h4,h5,h6{
     gap: 50px;
 }
 
+.vertical-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.horrizontal-center{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
 .glow{
     -webkit-box-shadow:0px 0px 135px 25px rgba(85,255,85,0.81);
     -moz-box-shadow: 0px 0px 135px 25px rgba(85,255,85,0.81);
