--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ h1,h2,h3,h4,h5,h6{
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     gap: 50px;
 }
@@ -123,7 +123,7 @@ h1,h2,h3,h4,h5,h6{
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 100vh;
+    /*max-height: 100vh;*/
     flex-direction: column;
 }
 
@@ -131,7 +131,7 @@ h1,h2,h3,h4,h5,h6{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    max-height: 100vh;
+    min-height: 100vh;
     flex-direction: row;
 }
 
